syntax = "proto3";

package types;

// message for execs.coins
message CoinsAction {
    oneof value {
        CoinsTransfer       transfer       = 1;
        CoinsWithdraw       withdraw       = 4;
        CoinsGenesis        genesis        = 2;
        CoinsTransferToExec transferToExec = 5;
    }
    int32 ty = 3;
}

//给某个地址凭空打币
//只能执行一次，不能执行第二次
message CoinsGenesis {
    int64  amount        = 2;
    string returnAddress = 3;
}

message CoinsTransfer {
    string cointoken = 1;
    int64  amount    = 2;
    string note      = 3;
    string to        = 4;
}

message CoinsTransferToExec {
    string cointoken = 1;
    int64  amount    = 2;
    string note      = 3;
    string execName  = 4;
    string to        = 5;
}

message CoinsWithdraw {
    string cointoken = 1;
    int64  amount    = 2;
    string note      = 3;
    string execName  = 4;
    string to        = 5;
}
